# mt3620Blink

./: .gitignore  Mt3620Blink.sln  README.md
Mt3620Blink1/: CMakeLists.txt  CMakeSettings.json  LICENSE.txt  Mt3620Blink1.vcxproj  Mt3620Blink1.vcxproj.filters  README.md  app_manifest.json  main.c
Mt3620Blink1/binaries/: OTA_Example_App_Green.imagepackage  OTA_Example_App_Red.imagepackage
